--- a/src/main/java/de/telekom/cot/client/view/RootLayout.fxml
+++ b/src/main/java/de/telekom/cot/client/view/RootLayout.fxml
@@ -4,6 +4,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.BorderPane?>
+<?import controls.TreeViewWithItems?>
 
 <BorderPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.telekom.cot.client.view.RootLayoutController">
    <top>
@@ -29,6 +30,6 @@
       </MenuBar>
    </top>
    <left>
-      <TreeView fx:id="treeView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
+      <TreeViewWithItems  fx:id="treeView" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </left>
 </BorderPane>
