--- a/src/main/java/de/telekom/cot/client/view/TabbedMain.fxml
+++ b/src/main/java/de/telekom/cot/client/view/TabbedMain.fxml
@@ -6,81 +6,86 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import com.lynden.gmapsfx.*?>
 
-<AnchorPane prefHeight="300.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.telekom.cot.client.view.TabbedMainController">
+<AnchorPane prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/8.0.40" xmlns:fx="http://javafx.com/fxml/1" fx:controller="de.telekom.cot.client.view.TabbedMainController">
 	<children>
-		<TabPane fx:id="tabPane" layoutX="119.0" layoutY="35.0" prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
-			<tabs>
-				<Tab text="General">
-					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-							<children>
-								<GridPane layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
-									<columnConstraints>
-										<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-										<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-									</columnConstraints>
-									<rowConstraints>
-										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-									</rowConstraints>
-									<children>
-										<Label text="ID" />
-										<Label text="Name" GridPane.rowIndex="1" />
-										<Label text="Status" GridPane.rowIndex="2" />
-										<Label fx:id="idLabel" text="Label" GridPane.columnIndex="1" />
-                              <TextField fx:id="deviceName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-									</children>
-								</GridPane>
-								<ButtonBar layoutX="386.0" layoutY="213.0" prefHeight="40.0" prefWidth="581.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
-									<buttons>
-										<Button mnemonicParsing="false" prefHeight="21.0" prefWidth="200.0" text="Register Step 1" />
-										<Button mnemonicParsing="false" text="Register Step 2" />
-										<Button mnemonicParsing="false" onAction="#handleDeleteDevice" text="Delete" />
-									</buttons>
-								</ButtonBar>
-							</children>
-						</AnchorPane>
-					</content>
-				</Tab>
-				<Tab text="Position">
-					<content>
-						<AnchorPane id="AnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-							<children>
-								<ButtonBar layoutX="386.0" layoutY="213.0" prefHeight="40.0" prefWidth="581.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
-									<buttons>
-										<Button mnemonicParsing="false" prefHeight="21.0" prefWidth="200.0" text="LoadTrack" />
-										<Button mnemonicParsing="false" text="Save Track" />
-										<Button mnemonicParsing="false" text="Run Track" />
-									</buttons>
-								</ButtonBar>
-
-								<GoogleMapView fx:id="mapView" prefHeight="100" prefWidth="576.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="45.0" />
-								<VBox alignment="BOTTOM_CENTER" fillWidth="false" layoutX="14.0" layoutY="45.0" prefHeight="100.0" prefWidth="576.0" spacing="10.0" styleClass="panel-background" stylesheets="@../styles/Styles.css" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" BorderPane.alignment="CENTER">
+      <SplitPane dividerPositions="0.2491638795986622" prefHeight="600.0" prefWidth="800.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+         <items>
+            <TreeView fx:id="treeView" prefHeight="298.0" prefWidth="181.0" />
+      		<TabPane fx:id="tabPane" prefHeight="298.0" prefWidth="494.0" tabClosingPolicy="UNAVAILABLE">
+      			<tabs>
+      				<Tab text="General">
+      					<content>
+      						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="265.0" prefWidth="572.0">
+      							<children>
+      								<GridPane layoutX="14.0" layoutY="14.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="5.0">
+      									<columnConstraints>
+      										<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      										<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+      									</columnConstraints>
+      									<rowConstraints>
+      										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      										<RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      									</rowConstraints>
+      									<children>
+      										<Label text="ID" />
+      										<Label text="Name" GridPane.rowIndex="1" />
+      										<Label text="Status" GridPane.rowIndex="2" />
+      										<Label fx:id="idLabel" text="Label" GridPane.columnIndex="1" />
+                                    <TextField fx:id="deviceName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+      									</children>
+      								</GridPane>
+      								<ButtonBar layoutX="386.0" layoutY="213.0" prefHeight="40.0" prefWidth="581.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
+      									<buttons>
+      										<Button mnemonicParsing="false" prefHeight="21.0" prefWidth="200.0" text="Register Step 1" />
+      										<Button mnemonicParsing="false" text="Register Step 2" />
+      										<Button mnemonicParsing="false" onAction="#handleDeleteDevice" text="Delete" />
+      									</buttons>
+      								</ButtonBar>
+      							</children>
+      						</AnchorPane>
+      					</content>
+      				</Tab>
+      				<Tab text="Position">
+      					<content>
+      						<AnchorPane id="AnchorPane" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+      							<children>
+      								<ButtonBar layoutX="386.0" layoutY="213.0" prefHeight="40.0" prefWidth="581.0" AnchorPane.leftAnchor="5.0" AnchorPane.topAnchor="5.0">
+      									<buttons>
+      										<Button mnemonicParsing="false" prefHeight="21.0" prefWidth="200.0" text="LoadTrack" />
+      										<Button mnemonicParsing="false" text="Save Track" />
+      										<Button mnemonicParsing="false" text="Run Track" />
+      									</buttons>
+      								</ButtonBar>
+      
+                  								<GoogleMapView fx:id="mapView" prefHeight="100" prefWidth="576.0" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" AnchorPane.topAnchor="45.0" />
+      								<VBox alignment="BOTTOM_CENTER" fillWidth="false" layoutX="14.0" layoutY="45.0" prefHeight="100.0" prefWidth="576.0" spacing="10.0" styleClass="panel-background" stylesheets="@../styles/Styles.css" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="5.0" AnchorPane.rightAnchor="5.0" BorderPane.alignment="CENTER">
 								</VBox>
-							</children>
-						</AnchorPane>
-					</content>
-				</Tab>
-				<Tab text="Controls">
-					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-							<children>
-								<Label layoutX="236.0" layoutY="125.0" text="Not Implemented yet" />
-							</children>
-						</AnchorPane>
-					</content>
-				</Tab>
-				<Tab text="Measurements">
-					<content>
-						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-							<children>
-								<Label layoutX="236.0" layoutY="125.0" text="Not Implemented yet" />
-							</children>
-						</AnchorPane>
-					</content>
-				</Tab>
-			</tabs>
-		</TabPane>
+      							</children>
+      						</AnchorPane>
+      					</content>
+      				</Tab>
+      				<Tab text="Controls">
+      					<content>
+      						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+      							<children>
+      								<Label layoutX="236.0" layoutY="125.0" text="Not Implemented yet" />
+      							</children>
+      						</AnchorPane>
+      					</content>
+      				</Tab>
+      				<Tab text="Measurements">
+      					<content>
+      						<AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+      							<children>
+      								<Label layoutX="236.0" layoutY="125.0" text="Not Implemented yet" />
+      							</children>
+      						</AnchorPane>
+      					</content>
+      				</Tab>
+      			</tabs>
+      		</TabPane>
+         </items>
+      </SplitPane>
 	</children>
 </AnchorPane>
