--- a/src/main/java/de/telekom/cot/client/view/RootLayout.fxml
+++ b/src/main/java/de/telekom/cot/client/view/RootLayout.fxml
@@ -15,9 +15,9 @@
               <MenuItem mnemonicParsing="false" onAction="#exitApplication" text="Close" />
             </items>
           </Menu>
-          <Menu mnemonicParsing="false" text="Edit">
+          <Menu mnemonicParsing="false" text="Cloud of Things">
             <items>
-              <MenuItem mnemonicParsing="false" text="Delete" />
+              <MenuItem mnemonicParsing="false" text="Connection Settings..." />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
