* Created Connection Settings dialog

--- a/src/main/java/de/telekom/cot/client/view/RootLayout.fxml
+++ b/src/main/java/de/telekom/cot/client/view/RootLayout.fxml
@@ -17,7 +17,7 @@
           </Menu>
           <Menu mnemonicParsing="false" text="Cloud of Things">
             <items>
-              <MenuItem mnemonicParsing="false" text="Connection Settings..." />
+              <MenuItem mnemonicParsing="false" onAction="#openCotSettingsDialog" text="Connection Settings..." />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
