Implemented load and savings for connection settings. Basics in, but needs to be changed for desired behavior.

--- a/src/main/java/de/telekom/cot/client/view/RootLayout.fxml
+++ b/src/main/java/de/telekom/cot/client/view/RootLayout.fxml
@@ -12,7 +12,10 @@
           <Menu mnemonicParsing="false" text="File">
             <items>
                   <MenuItem mnemonicParsing="false" onAction="#addNewDevice" text="New Device" />
-              <MenuItem mnemonicParsing="false" onAction="#exitApplication" text="Close" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleOpen" text="Open" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleSave" text="Save" />
+                  <MenuItem mnemonicParsing="false" onAction="#handleSaveAs" text="Save As..." />
+              <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Close" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Cloud of Things">
