--- a/src/main/java/de/telekom/cot/client/view/TabbedMain.fxml
+++ b/src/main/java/de/telekom/cot/client/view/TabbedMain.fxml
@@ -33,6 +33,8 @@
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
       									</rowConstraints>
       									<children>
       										<Label text="ID" />
@@ -46,6 +48,10 @@
                                     <TextField GridPane.columnIndex="1" GridPane.rowIndex="3" />
                                     <TextField GridPane.columnIndex="1" GridPane.rowIndex="4" />
                                     <TextField GridPane.columnIndex="1" GridPane.rowIndex="5" />
+                                    <Label text="Device Username" GridPane.rowIndex="6" />
+                                    <Label text="Device Password" GridPane.rowIndex="7" />
+                                    <Label fx:id="deviceUsernameLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+                                    <Label fx:id="devicePasswordLabel" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="7" />
       									</children>
       								</GridPane>
       								<ButtonBar layoutX="386.0" layoutY="213.0" prefHeight="40.0" prefWidth="581.0" AnchorPane.bottomAnchor="5.0" AnchorPane.rightAnchor="5.0">
